Second showcase done, with minor details to fix.

--- a/e-commerce/src/Home.css
+++ b/e-commerce/src/Home.css
@@ -16,16 +16,31 @@ body {
     font-family: 'Poppins', sans-serif;
     background-color: white;
 }
+.container {
+    width: 90%;
+    margin: 0 auto;
+}
+
+.btn {
+    border: 1px solid white;
+    width: 188px;
+    height: 60px;
+    border: none;
+}
+.btn-pink {
+    color: white;
+    background-color: var(--clr-pink);
+}
+.btn-black {
+    background-color: black;
+    color: white;
+}
 
 
 /* HOME - HEADER */
 .header {
     background-color: var(--clr-showcase-bg);
     height: 85vh;
-}
-.header .container {
-    width: 90%;
-    margin: 0 auto;
 }
 .header .menu {
     display: flex;
@@ -97,22 +112,56 @@ body {
 .showcase .text h1 {
     font-weight: 800;
     font-size: 65px;
+    line-height: 75px;
 }
 .showcase .text p {
     font-size: 20px;
-    margin-top: 2rem;
-    margin-bottom: 1rem;
+    margin-block: 2rem;
 }
 
-.btn {
-    /* width: 7rem; */
-    /* padding: .5em; */
-    border: 1px solid white;
-    width: 188px;
-    height: 60px;
+
+
+
+
+/* HOME - SHOWCASE 2 */
+.second-showcase {
+    margin-block: 2rem;
 }
-.btn-pink {
-    /* outline: 6px solid var(--clr-pink); */
-    color: white;
-    background-color: var(--clr-pink);
+.second-showcase .container {
+    display: flex;
+    height: 50vh;
+}
+.second-showcase .container .winter {
+    flex: 2;
+    background-image: url(./img/showcase-img-1.svg);
+    background-color: rgb(198, 191, 191);
+    background-size: contain;
+    background-position: right bottom;
+    background-repeat: no-repeat;
+
+    padding: 2rem;
+    padding-top: 4rem;
+}
+.second-showcase .container .winter p,
+.second-showcase .container .arrivals p {
+    margin-block: 1rem;
+    max-width: 55%;
+}
+
+.second-showcase .container .arrivals {
+    flex: 1;
+    background-image: url(./img/showcase-img-2.svg);
+    background-color: #E6E6E6;
+    background-position: right bottom;
+    background-size: contain;
+    background-repeat: no-repeat;
+
+    padding: 2rem;
+    padding-top: 8rem;
+}
+.second-showcase .container .arrivals h2,
+.second-showcase .container .winter h2 {
+    margin-bottom: 1rem;
+    font-size: 30px;
+    line-height: 40px;
 }
