--- a/e-commerce/src/Home.css
+++ b/e-commerce/src/Home.css
@@ -64,9 +64,6 @@ body {
     font-size: 16;
     text-decoration: none;
 }
-.active {
-    color: var(--clr-pink);
-}
 .header .menu .menu-icons {
     display: flex;
     align-items: center;
@@ -164,4 +161,56 @@ body {
     margin-bottom: 1rem;
     font-size: 30px;
     line-height: 40px;
+}
+
+
+
+
+
+/* HOME - FEATURED PRODUCT */
+.featured {
+    width: 50%;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 2rem;
+}
+.featured .products {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    justify-content: center;
+    gap: 1.5rem;
+    margin-top: 1rem;
+}
+.product-item .text {
+    display: flex;
+    flex-direction: column;
+}
+.product-item {
+    position: relative;
+}
+/* .product-item:hover {
+    display: show;
+} */
+.product-item .gray-box {
+    width: 220px;
+}
+.clr-gray {
+    color: gray;
+}
+.not-so-strong {
+    font-weight: 600;
+}
+
+.quick-view {
+    position: absolute;
+    top: 148px;
+    display: none;
+
+    width: 100%;
+    padding-block: 1rem;
+    background-color: var(--clr-pink);
+    color: white;
+}
+.featured-icons {
+    display: none;
 }
