--- a/e-commerce/src/Home.css
+++ b/e-commerce/src/Home.css
@@ -238,7 +238,7 @@ body {
     gap: 1rem;
     font-size: x-large;
 }
-.clr-white {
+.third-showcase .clr-white {
     color: white;
 }
 .third-showcase .pamela button {
@@ -258,4 +258,44 @@ body {
     flex-direction: column;
     justify-content: center;
     font-size: x-large;
+}
+
+
+
+/* HOME - OUR SPECIALITY */
+.our-speciality {
+    text-align: center;
+    margin-bottom: 3rem;
+}
+.our-speciality .container {
+    background-color: #F5F5F5;
+    padding: 3rem;
+}
+.our-speciality .box-container {
+    display: flex;
+    gap: 1rem;
+    justify-content: space-between;
+}
+.our-speciality .box-group {
+    display: flex;
+}
+.our-speciality .box {
+    background-color: white;
+    width: 190px;
+    height: 190px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.our-speciality .box small {
+    border-bottom: 1px solid gray;
+    margin-top: 1rem;
+}
+.our-speciality .box-gray {
+    background-color: #BBBBBB;
+    width: 190px;
+    height: 190px;
+
 }
