Moved nav-links to center

--- a/e-commerce/src/Home.css
+++ b/e-commerce/src/Home.css
@@ -23,10 +23,30 @@ body {
 
 .btn {
     border: 1px solid white;
-    width: 188px;
-    height: 60px;
+    width: 170px;
+    height: 50px;
     border: none;
+    /* overflow: hidden; */
+    /* position: relative; */
 }
+.btn::after {
+    /* content: '';
+    inset: 7px;
+    position: absolute;
+    border-top: 2px solid white; */
+    /* width: 30px; */
+    /* border-bottom: 2px solid white; */
+
+    /* transform: scaleX(.5); */
+    /* transform: rotateY(-40deg); */
+    /* transform: translate(120px, 50%); */
+    /* transform: scale(0.3) translate(-100%, -100%); */
+}
+/* .btn::after {
+    border-right: 2px solid white;
+    border-left: 2px solid white;
+} */
+
 .btn-pink {
     color: white;
     background-color: var(--clr-pink);
@@ -58,6 +78,10 @@ body {
     display: flex;
     align-items: center;
     gap: 2rem;
+
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
 }
 .header .menu .nav-links a {
     color: var(--clr-title);
