--- a/e-commerce/src/ProductDetails.css
+++ b/e-commerce/src/ProductDetails.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Roboto:wght@100&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 * {
   box-sizing: border-box;
@@ -6,10 +6,14 @@
   padding: 0;
 }
 
-.container {
-  display: flex;
-  flex-direction: column;
-  margin: 0 20rem;
+html,
+body {
+  font-family: "Poppins", sans-serif;
+}
+
+.intro-container {
+  width: 70%;
+  margin: 0 auto;
 }
 div .promo {
   text-align: center;
@@ -156,6 +160,9 @@ li.active {
 .related-pdts p {
   font-weight: 700;
 }
+.related-pdts div{
+  margin-right: 1.2rem;
+}
 .related-pdts div button {
   margin-right: 0.5rem;
   background: #fff;
@@ -164,9 +171,14 @@ li.active {
 }
 
 .related-pdts-img {
-  display: flex;
+  /* display: flex;
   justify-content: space-between;
   align-items: center;
   text-align: center;
+  margin-top: 1rem; */
+  display: grid;
+  grid-template-columns:auto auto auto auto;
+  text-align: center;
   margin-top: 1rem;
+  row-gap: 20px;
 }
