--- a/e-commerce/src/styles/Home.css
+++ b/e-commerce/src/styles/Home.css
@@ -201,6 +201,38 @@ body {
   flex-direction: column;
   width: 825px;
 }
+.flash-text {
+  font-size: 3rem;
+  color: #ffffff;
+}
+.btn {
+  font-weight: 600;
+  position: relative;
+  background-color: #fff;
+  padding: 1.5rem 0.75rem;
+}
+.btn::before {
+  content: "";
+  position: absolute;
+  left: 10px;
+  bottom: 30px;
+  width: 20px;
+  height: 20px;
+  background-color: transparent;
+  border-left: 2px solid #000;
+  border-top: 2px solid #000;
+}
+.btn::after {
+  content: "";
+  position: absolute;
+  right: 10px;
+  top: 30px;
+  width: 20px;
+  height: 20px;
+  background-color: transparent;
+  border-right: 2px solid #000;
+  border-bottom: 2px solid #000;
+}
 
 .sales-card-wrapper {
   display: grid;
