--- a/e-commerce/src/styles/Home.css
+++ b/e-commerce/src/styles/Home.css
@@ -226,7 +226,7 @@ body {
   border-top: 2px solid #000;
 }
 .btn::after {
-  content: "";
+  content: ""; 
   position: absolute;
   right: 10px;
   top: 30px;
@@ -278,4 +278,26 @@ body {
 }
 .fa-star {
   color: #FF7373;
+}
+
+/* SHOWCASE FLASH SALE LOWER */
+.showcase-flash-sale {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  gap: 1rem;
+  background-color: #7a7a7a;
+  width: 70%;
+  padding: 3rem;
+}
+.showcase-flash-sale h2 {
+  font-size: 2.5rem;
+}
+.showcase-flash-sale h5 {
+  font-size: 1rem;
+}
+.showcase-flash-sale .btn {
+  margin-top: 1rem;
 }
