--- a/e-commerce/src/styles/Home.css
+++ b/e-commerce/src/styles/Home.css
@@ -30,6 +30,15 @@ body {
   width: 188px;
   height: 60px;
   border: none;
+  cursor: pointer;
+  font-weight: 600;
+  position: relative;
+  background-color: #fff;
+  padding: 1.5rem 0.75rem;
+}
+
+.d-flex {
+  display: flex;
 }
 
 .btn-pink {
@@ -40,6 +49,10 @@ body {
 .btn-black {
   background-color: black;
   color: white;
+}
+
+.d-flex {
+  display: flex;
 }
 
 
@@ -203,10 +216,12 @@ body {
   flex-direction: column;
   width: 825px;
 }
+
 .flash-text {
   font-size: 3rem;
   color: #ffffff;
 }
+
 .btn {
   cursor: pointer;
   font-weight: 600;
@@ -214,6 +229,7 @@ body {
   background-color: #fff;
   padding: 1.5rem 0.75rem;
 }
+
 .btn::before {
   content: "";
   position: absolute;
@@ -225,8 +241,9 @@ body {
   border-left: 2px solid #000;
   border-top: 2px solid #000;
 }
+
 .btn::after {
-  content: ""; 
+  content: "";
   position: absolute;
   right: 10px;
   top: 30px;
@@ -243,6 +260,7 @@ body {
   gap: 1.5rem;
   padding-right: 4rem;
 }
+
 .sales-card-wrapper-lower {
   display: grid;
   grid-template-columns: minmax(255px, 280px) auto;
@@ -267,15 +285,20 @@ body {
 .sales-card-wrapper-upper .card h6,
 .sales-card-wrapper-lower .card h6 {
   align-self: flex-start;
+  font-size: 1rem;
+  font-weight: 600;
 }
+
 .sales-card-wrapper-upper .card small,
 .sales-card-wrapper-lower .card small {
   font-weight: 500;
 }
+
 .sales-card-wrapper-upper .card p,
-.sales-card-wrapper-lower .card p {
+.sales-card-wrapper-lower .card p { 
   font-weight: 600;
 }
+
 .fa-star {
   color: #FF7373;
 }
@@ -292,12 +315,112 @@ body {
   width: 70%;
   padding: 3rem;
 }
+
 .showcase-flash-sale h2 {
   font-size: 2.5rem;
 }
+
 .showcase-flash-sale h5 {
   font-size: 1rem;
 }
+
 .showcase-flash-sale .btn {
   margin-top: 1rem;
+}
+
+.selling-section {
+  width: 70%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+.top-selling-section {
+  margin-block: 2rem;
+
+}
+
+.selling-section .small-sales-card {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.selling-section .small-sales-card .card-picture {
+  background-color: var(--clr-showcase-bg);
+  width: 150px;
+  height: 120px;
+  margin-right: .7rem;
+}
+.selling-section .small-sales-card h6 {
+  align-self: flex-start;
+  font-size: 1rem;
+  font-weight: 600;
+}
+
+.selling-section .small-sales-card small {
+  font-weight: 600;
+  color: #616365;
+}
+
+.selling-section .small-sales-card p {
+  font-weight: 600;
+}
+.selling-section .small-sales-card .card-content {
+  padding-right: 1.3rem;
+}
+
+.selling-title {
+  margin-bottom: 1rem;
+  font-size: 1.1rem;
+  font-weight: 800;
+}
+/* Info circles */
+
+.section-divider {
+  width: 70%;
+  /* height: 1px; */
+
+  border-top: 1px solid #b3b7bb;
+  margin: 0 auto;
+  /* background-color: #b3b7bb; */
+  margin-top: 2rem;
+  padding-top: 3rem;
+}
+
+.info-circles {
+  margin: 0 auto;
+  display: flex;
+  width: 70%;
+  align-self: center;
+  justify-self: center;
+  gap: 1rem;
+}
+.info-circles .circle {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: #fff;
+  box-shadow: 0px 4px 7px #b3b7bb;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.info-circles .info-content {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  gap: 1rem;
+}
+
+.info-circles .circle img {
+  width: 1.6rem;
+}
+
+.info-circles .info-content h6 {
+  color: #616365;
+  font-weight: 500;
+  font-size: .8rem;
 }
