--- a/e-commerce/src/ProductDetails.css
+++ b/e-commerce/src/ProductDetails.css
@@ -115,10 +115,11 @@ select {
 .fa-brands {
   margin-right: 1rem;
 }
-
-.small-img {
-  /* margin-right: 33.4px; */
-  margin-right: 7px;
+.small-images{
+  width: 540px;
+  display: flex;
+  justify-content: space-between;
+  
 }
 
 .product-description ul.steps-list {
@@ -181,4 +182,10 @@ li.active {
   text-align: center;
   margin-top: 1rem;
   
+}
+
+.pdt-images{
+  height: 620px;
+  width: 540px;
+
 }
