--- a/e-commerce/src/components/blog/blogCategories-styles.css
+++ b/e-commerce/src/components/blog/blogCategories-styles.css
@@ -1,7 +1,9 @@
 .blogCategories-conatiner{
     align-items: center;
     width : 100%;
-   
+    list-style: none;
+    padding: 1.2rem 0.6rem;
+    margin-left: 2rem;
 }
 
 
