--- a/e-commerce/src/components/blog/blogdetails-styles.css
+++ b/e-commerce/src/components/blog/blogdetails-styles.css
@@ -6,7 +6,7 @@
     width: 75%;
     margin:0;
     margin-left: 10%;
-   align-content: center;
+    align-content: center;
 }
 /* .blog-details-layout div{
     border : 2px solid rgb(0, 200, 255);
@@ -24,11 +24,7 @@
         flex-direction: column;
         margin: 0;
     }
-
-    .blog-section-details-one .blog-details-main-img{
-        width: 100%;
-        height: 25vh;
-    }
+   
 
     .sub-profile {
         font-size: 1rem;
@@ -66,6 +62,86 @@
         margin: 0.2rem 0.2rem;
     }
 
-     .tags-box span{
-       
-     }
+
+    .box-tags-share{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    .box-tags-share div{
+        margin: 0.4rem 0.32rem;
+      }
+      .box-tags-share div i{
+        margin: 0.4rem 0.32rem;
+      }
+
+   /* form comment */
+   .form-container-comment{
+    width: 95%;
+    display: flex;
+    flex-direction: column;
+    padding: 0.6rem 1.2rem;
+    margin: 2rem;
+}
+  
+  .form-container-comment div input{
+        width: 45%;
+        padding: .6rem .5rem;
+        
+
+        
+    }
+    .form-container-comment button{
+        width:30%;
+        padding: .6rem .5rem;
+        align-content: center;
+    }
+    .blog-section-details-one .blog-details-main-img{
+        width: 100%;
+        height: 25vh;
+    }
+     @media screen and (max-width: 992px) {
+        .blog-details-layout{
+            display: flex;
+            flex-direction: row;
+            width: 100%;
+            margin:0;
+            align-content: center;
+        }
+        .blog-details-subcontent img{
+            height: 25vh;
+        }
+      }
+      
+
+     @media screen and (max-width: 1080px) {
+        .blog-details-layout{
+            display: flex;
+            flex-direction: row;
+            width: 100%;
+            margin:0;
+            align-content: center;
+        }
+        .blog-details-subcontent img{
+            width: 100%;
+            height: 25vh;
+        }
+      }
+      
+      /* On screens that are 600px or less, set the background color to olive */
+      @media screen and (max-width: 600px) {
+        .blog-details-layout{
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            margin:0;
+            align-content: center;
+        }
+        .blog-details-subcontent
+        {
+            display:flex;
+            flex-direction: column;
+            
+        }
+        
+      }
